--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.0.0",
+    "@mui/x-charts": "^7.27.1",
+    "critters": "^0.0.23",
+    "firebase": "^10.7.2",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-hot-toast": "^2.4.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "typescript": "^5",
